jlamontSC-test/src/objects/Local_Grassroots_Campaign__c.object
<CustomObject>
    <fields>
        <fullName>Club_Entity_Team_Type__c</fullName>
        <formula>TEXT(Club_Entity_Team__r.Entity_Type__c)</formula>
        <label>Club Entity/Team Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Club_Entity_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Entity/Team</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipName>Chapter_Group_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Local_Grassroots_Campaign_Type__c</fullName>
        <label>Local/Grassroots Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Marketing_Tags</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Local/Grassroots Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Club_Entity_Team__c</columns>
        <columns>Club_Entity_Team_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Local/Grassroots Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Local/Grassroots Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>